# ChaosMagnet

./: .gitignore  Cargo.toml  LICENSE.md  README.md  main.py
logs/: 2015_laptop_benchmark.txt
src/: lib.rs
