[package]
name = "chaos_magnet_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "chaos_magnet_core"
crate-type = ["cdylib"]

[dependencies]
# Python Bridge (0.23+ supports Python 3.13)
pyo3 = { version = "0.23", features = ["extension-module"] }

# Crypto
sha3 = "0.10"
pqcrypto-kyber = "0.8"
pqcrypto-falcon = "0.3"
pqcrypto-traits = "0.3"
rand = "0.8"
hex = "0.4"

# Hardware / System
cpal = "0.15"       # Audio
rdev = "0.5"        # Mouse
sysinfo = "0.30"    # System Stats
nokhwa = { version = "0.10", features = ["input-native"] } # Video

# Networking & Async
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
parking_lot = "0.12"
chrono = "0.4"      # For proper timestamp formatting